# bench_mdrange_vs_range

./: .gitmodules  CMakeLists.txt  README.md
scripts/: run_benchmark.sh
scripts/supercomputers/: adastra_mi300a.slurm  jean_zay_h100.slurm
src/: triad_1d.cpp
